k8s/memo-app/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memo-app
  labels:
    name: memo-app
    app: memo-app
