k8s/memo-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memo-app-ingress
  namespace: memo-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: memo.docuralis.com
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - memo.docuralis.com
    secretName: memo-app-tls
  rules:
  - host: memo.docuralis.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: memo-frontend
            port:
              number: 3000
